apps/savidhi_backend/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: savidhi
  labels:
    name: savidhi
